traefik/whoami/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: traefik
spec:
  replicas: 3
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: whoami
                topologyKey: kubernetes.io/hostname
      containers:
        - name: whoami
          image: ghcr.io/traefik/whoami:v1.11.0
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "1m"
              memory: "1Mi"
            limits:
              cpu: "100m"
              memory: "100Mi"

...
