traefik/whoami/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.argocd-k3s-test.local.panzer1119.de`)
      kind: Rule
      services:
        - name: whoami
          port: 80
...
